--- a/verify-161-deploy/src/main/resources/templates/spark-operator.yaml
+++ b/verify-161-deploy/src/main/resources/templates/spark-operator.yaml
@@ -7,7 +7,7 @@ metadata:
     - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: argocd
+    namespace: argocd-2
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
@@ -19,5 +19,24 @@ spec:
       valueFiles:
         {{- range .Values.spec.helm.valueFiles }}
         - {{ . }}
-        {{- end }}    
+        {{- end }}
     {{ end }}
+  syncPolicy:
+    {{- with .Values.spec.syncPolicy }}
+      {{- if .automated }}
+    automated:
+        {{- toYaml .automated | nindent 6}}
+      {{- else if hasKey . "automated" }}
+    automated: {}
+      {{- end }}
+    {{- end }}
+    {{/* This template comment explains how the logic below works*/}}
+    {{- /* This one trims the newlines so it doesn't affect output */ -}}
+    #these options are important
+    syncOptions:
+      - ServerSideApply=true # https://github.com/argoproj/argo-cd/issues/820#issuecomment-135463693
+    {{- if .Values.spec.syncPolicy }}
+      {{- with .Values.spec.syncPolicy.syncOptions }}
+        {{- toYaml . | nindent 6 }}
+      {{- end }}
+    {{- end }}
