--- a/verify-161-deploy/src/main/resources/values.yaml
+++ b/verify-161-deploy/src/main/resources/values.yaml
@@ -1,12 +1,17 @@
 spec:
   destination:
     server: https://kubernetes.default.svc
-  targetRevision: dev
-  repo: git.example.com/verify-161
+  targetRevision: main
+  repo: https://github.com/csun-cpointe/verify-161
   helm:
     valueFiles:
       - values.yaml
+  syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
+      - ApplyOutOfSyncOnly=true
+    automated: {}
 
 global:
   imagePullPolicy: Always
-  dockerRepo: aiops-docker-internal.nexus.boozallencsn.com/aiops/
+  dockerRepo: ghcr.io/
